syntax = "proto3";

package go_proto;
option go_package = "./go_proto";

message CreateUserRequest {
  string name = 1;
  string surname = 2;
}

message UserDataResponse {
  string id = 1;
  string name = 2;
  string surname = 3;
}

service User {
  rpc CreateUser (CreateUserRequest) returns (UserDataResponse) {}
}
